--- a/src/ProjectDemo/PageObjects/styles.scss
+++ b/src/ProjectDemo/PageObjects/styles.scss
@@ -8,5 +8,6 @@
 .page-object {
   // background-color: red;
   border: 0.2vw black solid;
+  // transform: rotate(45deg);
   // border-radius: 100vw;
 }
